{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 18,
  "lineage": "a6825da5-f045-a4ca-7465-c359ac04650d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:390665042662:vpc/vpc-3da39c54",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-7ed08917",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-bfbbbbd6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-3da39c54",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-b2c6dbdb",
            "owner_id": "390665042662",
            "state": "available",
            "tags": {
              "Name": "Emumba-Default-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:390665042662:loadbalancer/app/terraform-asg-example/f24ad6b4c790f18b",
            "arn_suffix": "app/terraform-asg-example/f24ad6b4c790f18b",
            "dns_name": "terraform-asg-example-354556612.us-east-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:390665042662:loadbalancer/app/terraform-asg-example/f24ad6b4c790f18b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-asg-example",
            "security_groups": [
              "sg-0b020c931f154ff6b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-6b75fe26"
              },
              {
                "subnet_id": "subnet-834b04f8"
              },
              {
                "subnet_id": "subnet-a3dbd4ca"
              }
            ],
            "subnets": [
              "subnet-6b75fe26",
              "subnet-834b04f8",
              "subnet-a3dbd4ca"
            ],
            "vpc_id": "vpc-3da39c54",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:390665042662:listener/app/terraform-asg-example/f24ad6b4c790f18b/75d4f067c4681e41",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:390665042662:listener/app/terraform-asg-example/f24ad6b4c790f18b/75d4f067c4681e41",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:390665042662:loadbalancer/app/terraform-asg-example/f24ad6b4c790f18b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.example",
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:390665042662:targetgroup/terraform-asg-example/deb7ba894c9ef35b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:390665042662:listener-rule/app/terraform-asg-example/f24ad6b4c790f18b/75d4f067c4681e41/18c477243dd8b968",
            "condition": [
              {
                "field": "path-pattern",
                "values": [
                  "*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:390665042662:listener-rule/app/terraform-asg-example/f24ad6b4c790f18b/75d4f067c4681e41/18c477243dd8b968",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:390665042662:listener/app/terraform-asg-example/f24ad6b4c790f18b/75d4f067c4681e41",
            "priority": 100
          },
          "dependencies": [
            "aws_lb.example",
            "aws_lb_listener.http",
            "aws_lb_target_group.asg",
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:390665042662:targetgroup/terraform-asg-example/deb7ba894c9ef35b",
            "arn_suffix": "targetgroup/terraform-asg-example/deb7ba894c9ef35b",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:390665042662:targetgroup/terraform-asg-example/deb7ba894c9ef35b",
            "lambda_multi_value_headers_enabled": false,
            "name": "terraform-asg-example",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-3da39c54"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:390665042662:security-group/sg-0b020c931f154ff6b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b020c931f154ff6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-alb",
            "name_prefix": null,
            "owner_id": "390665042662",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-3da39c54"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:390665042662:security-group/sg-00f81f7c472fdd1f3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00f81f7c472fdd1f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-example-instance",
            "name_prefix": null,
            "owner_id": "390665042662",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-3da39c54"
          }
        }
      ]
    }
  ]
}